--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 django = "*"
 django-debug-toolbar = "*"
+django-taggit = "==1.2.0"
 
 [requires]
 python_version = "3.8"
